--- a/views/index/index_layout.erb
+++ b/views/index/index_layout.erb
@@ -2,26 +2,73 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Savvy Budget</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Weight Tracker</title>
 
-    <link rel="stylesheet" href="css/lib/normalize.min.css">
-    <link rel="stylesheet" href="css/lib/main.css">
-    <link rel="stylesheet" href="css/slide_style.css">
-    <link rel="stylesheet" href="css/index_style.css">
-
-    <script src="js/lib/modernizr-2.6.2.min.js"></script>
-</head>
-<body>
+  <!-- Bootstrap -->
+  <link href="css/lib/bootstrap.css" rel="stylesheet">
+  <!-- custom css (blue color by default) -->
+  <link href="css/style.css" rel="stylesheet" type="text/css" media="screen">
   
-  <%= yield %>
+  <link href="css/lib/font-awesome-4.3.0/css/font-awesome.min.css" rel="stylesheet">
+  <!-- flex slider css -->
+  <!-- <link href="css/flexslider.css" rel="stylesheet" type="text/css" media="screen"> -->
+  <!-- animated css  -->
+  <link href="css/lib/animate.css" rel="stylesheet" type="text/css" media="screen">
+  <!--google fonts-->
+  
+  
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+  <!--owl carousel css-->
+  <!-- <link href="css/owl.carousel.css" rel="stylesheet" type="text/css" media="screen">
+  <link href="css/owl.theme.css" rel="stylesheet" type="text/css" media="screen"> -->
+  <!--mega menu -->
+  <!-- <link href="css/yamm.css" rel="stylesheet" type="text/css"> -->
+  <!--popups css-->
+  <!-- <link href="css/magnific-popup.css" rel="stylesheet" type="text/css"> -->
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 
- 
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.1/TweenMax.min.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.16.1/plugins/ScrollToPlugin.min.js"></script>
-  <script src="js/lib/jquery.min.js"></script>
-  <script src="js/slide-animation.js"></script>
-</body>
+  </head>
+  <body>
+
+    <%= yield %>
+
+    <!--scripts and plugins -->
+    <!--must need plugin jquery-->
+    <script src="js/lib/jquery.min.js"></script>        
+    <!--bootstrap js plugin-->
+    <script src="js/lib/bootstrap.min.js" type="text/javascript"></script>       
+    <!--easing plugin for smooth scroll-->
+    <script src="js/lib/jquery.easing.1.3.min.js" type="text/javascript"></script>
+    <!--sticky header-->
+    <script type="text/javascript" src="js/lib/jquery.sticky.js"></script>
+    <!--parallax background plugin-->
+    <script src="js/lib/jquery.stellar.min.js" type="text/javascript"></script>
+
+    <!--on scroll animation-->
+    <script src="js/lib/wow.min.js" type="text/javascript"></script>
+
+
+    <!--customizable plugin edit according to your needs-->
+    <script src="js/custom.js" type="text/javascript"></script>
+    <script src="js/lib/typed.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        /* Typed
+            ================================================== */
+            $(".element").each(function(){
+                var $this = $(this);
+                $this.typed({
+                strings: $this.attr('data-elements').split(','),
+                typeSpeed: 100, // typing speed
+                backDelay: 3000 // pause before backspacing
+                });
+            });
+    </script>
+  </body>
 </html>
