--- a/views/index/index_layout.erb
+++ b/views/index/index_layout.erb
@@ -6,27 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Weight Tracker</title>
 
-  <!-- Bootstrap -->
-  <link href="css/lib/bootstrap.css" rel="stylesheet">
-  <!-- custom css (blue color by default) -->
+  <!--Development Stylesheets-->
+  <!-- <link href="css/lib/bootstrap.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet" type="text/css" media="screen">
+  <link href="css/lib/animate.css" rel="stylesheet" type="text/css" media="screen"> -->
+
+  <!--Production Stylesheets-->
+  <link href="css/out/bootstrap.css" rel="stylesheet">
+  <link href="css/out/style.css" rel="stylesheet" type="text/css" media="screen">
+  <link href="css/out/animate.css" rel="stylesheet" type="text/css" media="screen">
   
   <link href="css/lib/font-awesome-4.3.0/css/font-awesome.min.css" rel="stylesheet">
-  <!-- flex slider css -->
-  <!-- <link href="css/flexslider.css" rel="stylesheet" type="text/css" media="screen"> -->
-  <!-- animated css  -->
-  <link href="css/lib/animate.css" rel="stylesheet" type="text/css" media="screen">
   <!--google fonts-->
-  
-  
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-  <!--owl carousel css-->
-  <!-- <link href="css/owl.carousel.css" rel="stylesheet" type="text/css" media="screen">
-  <link href="css/owl.theme.css" rel="stylesheet" type="text/css" media="screen"> -->
-  <!--mega menu -->
-  <!-- <link href="css/yamm.css" rel="stylesheet" type="text/css"> -->
-  <!--popups css-->
-  <!-- <link href="css/magnific-popup.css" rel="stylesheet" type="text/css"> -->
+  
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
