change production bootstrap to use cdn

--- a/views/index/index_layout.erb
+++ b/views/index/index_layout.erb
@@ -12,7 +12,7 @@
   <link href="css/lib/animate.css" rel="stylesheet" type="text/css" media="screen"> -->
 
   <!--Production Stylesheets-->
-  <link href="css/out/bootstrap.css" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/out/style.css" rel="stylesheet" type="text/css" media="screen">
   <link href="css/out/animate.css" rel="stylesheet" type="text/css" media="screen">
   
