add height input when creating user

--- a/views/partials/sign_up_modal_form.erb
+++ b/views/partials/sign_up_modal_form.erb
@@ -15,6 +15,11 @@
             </div>
             <br>
             <div class="input-group">
+              <span class="input-group-addon"><i class="fa fa-heart"></i></span>
+              <input type="text" class="form-control" name="height" placeholder="height">
+            </div>
+            <br/>
+            <div class="input-group">
               <span class="input-group-addon"><i class="fa fa-lock"></i></span>
               <input type="password" class="form-control" name="password" placeholder="Password">
             </div>
