update height placeholder

--- a/views/partials/sign_up_modal_form.erb
+++ b/views/partials/sign_up_modal_form.erb
@@ -16,7 +16,7 @@
             <br>
             <div class="input-group">
               <span class="input-group-addon"><i class="fa fa-heart"></i></span>
-              <input type="text" class="form-control" name="height" placeholder="height">
+              <input type="text" class="form-control" name="height" placeholder="height in m">
             </div>
             <br/>
             <div class="input-group">
